app/static/css/main.css
/* ... */
.author .expando {
  top: 5.6px;
}

.pure-u-1.pure-u-md-13-24.pastebin {
  width: 80%;
}

iframe {
  border: 0;
  display: block;
}

.iframewrapper {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 */
  padding-top: 25px;
  height: 0;
}

.iframewrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.expandotxt img,
.expandotxt video,
.expandotxt iframe {
  max-width: 100%;
}

.resize-handle {
  text-align: right;
  cursor: nwse-resize;
}

.resize-handle .i-icon {
  width: 24px;
  height: 24px;
}

.post .domain a,
.post .domain {
  color: #25b2dce8;
  font-size: 0.7em;
}

.post .author {
  font-size: 0.7em;
  color: #888;
  margin-top: .4em;
}

.post .thumbnail {
  width: 70px;
  height: 70px;
  text-align: center;
  position: relative;
  right: 2px;
}

.post .thumbnail img {
  max-width: 100%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  border: 1px solid #555;
}

.post .thumbnail:hover {
  -webkit-filter: opacity(85%);
  filter: opacity(85%);
}

.c-upvote,
.c-downvote,
.upvote,
.downvote {
  height: 20px;
  width: 18px;
  display: inline-block;
  /* margin-left: auto;
  margin-right: auto;*/
  cursor: pointer;
}

.upvoted path {
  fill: var(--upvote-color);
}

.downvoted path {
  fill: var(--downvote-color);
}

.misctainer {
  padding-left: .6em;
  padding-right: .4em;
}

.votebuttons {
  height: 100%;
  min-width: 1em;
  max-height: 70px;
  padding: .15em .2em 0 .2em;
  float: left;
  margin-right: 8px;
  max-width: 2.2em;
}

.score {
  font-size: 17px;
  color: #505050;
  margin: 5px 2px 5px 0px;
  text-align: center;
  letter-spacing: normal;
}

.score.archived {
  padding-top: 20px;
  padding-left: 3px;
  padding-right: 5px;
}

.thcontainer {
  display: inline-block;
  position: relative;
  width: 70px;
  height: 70px;
}

.expando svg path {
  fill: #555;
}

.expando svg {
  width: 20px;
  height: 20px;
  margin-top: 2px;
  top: -1px;
  position: relative;
}

.expando .icon svg {
  width: 16px;
  height: 16px;
  top: -5px;
  position: relative;
}

.author .expando .icon svg {
  top: -2px;
}

.votebuttons svg {
  width: 16px;
  height: 16px;
  margin: 0;
}

.expandotxt {
  /*  background-color: #e1e1e1; */
  padding: 1em;
  position: relative;
}

.expando-wrapper {
  display: inline-block;
  will-change: height;
}

.thumbnail .placeholder svg path {
  fill: #888888;
}

.pure-menu a svg {
  height: 4em;
  margin: 0px 0px 4px 0px;
}

.thumbnail .placeholder {
  width: 50px;
  height: 50px;
  margin: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

a#nextp {
  color: #fff;
  float: right;
  margin: 1em 2em;
  border-radius: 4px;
}


a#prevp {
  color: #fff;
  float: left;
  margin: 1em 2em;
  border-radius: 4px;
}

#sortbuttons div {
  justify-content: center;
}

div#sortbuttons {
  padding-bottom: 5px;
}

.links {
  margin: 1px 0 0 .45em;
  padding: 0;
}

a.slink {
  color: #12619c;
  font-weight: 700;
  cursor: pointer;
  -ms-user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
}

.subinfo {
  text-align: center;
}

.subs {
  margin-bottom: .6em;
  text-align: center;
}

.links a {
  position: relative;
  right: 12px;
  font-size: 0.7em;
  font-weight: bold;
  color: #888;

  cursor: pointer;
  -ms-user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  user-select: none;
  margin-left: .5em;
}

a.reply-comment {
  font-size: 11px;
}

.links li {
  display: inline-block;
  padding: 0 .25em;
}

.nsfw {
  display: inline-block;
  padding: 3px;
  background-color: transparent;
  border-radius: 4px;
  color: #e22;
  font-size: 12px;
  line-height: 12px;
  margin-right: .3em;
  border: 1px solid #e22;
}

.nsfw-blur {
  -webkit-filter: blur(4px);
  filter: blur(4px);
  cursor: pointer;
}

.block-blur,
.block-blur.title,
a.block-blur.title:visited {
  color: #a61515;
  -webkit-filter: blur(4px);
  filter: blur(4px);
  cursor: pointer;
}

img.nsfw-blur,
img.block-blur {
  -webkit-filter: blur(8px);
  filter: blur(8px);
}

.stickyposts {
  /*  margin-top: 1em;*/
  /*  margin-bottom: .5em;*/
  /*  padding-top: 0.5em;*/
  padding-bottom: .5em;
  border-bottom: 1px solid #efefef;
  background: linear-gradient(270deg, #ffffff 85%, #f1f1f1 100%);
}

.stickyposts .links a.comments {
  color: #0f5387;
}

.stick {
  color: #009300
}

/* /POST LIST STYLES */

/* POST PAGE STYLES */

@media screen and (max-width: 48em) {
  .wholepost .thcontainer {
    display: none;
  }

  .wholepost .misctainer {
    float: none;
  }
}

.postinfo {
  display: inline-block;
  /*  width: 82%; */
}

.popup {
  width: 50%;
  position: absolute;
  top: 5em;
  left: 25%;
  background-color: white;
  padding: 1em;
  border: 1px solid gray;
  z-index: 100;
}

.postflair,
.selflair,
.submitflair {
  border: 1px solid #aaa;
  border-radius: 5px;
  color: black;
  background-color: #eee;
  padding: 3px;
  line-height: 2em;
  white-space: nowrap;
  font-size: small;
  cursor: pointer;
}

#flair {
  text-align: center;
  padding-bottom: .2em;
}

#flair a {
  font-size: small;
  white-space: pre;
}

.submitflair {
  margin-right: .3em;
  margin-bottom: .3em;
  line-height: 1em;
}

.submitflair.selected {
  color: #fff;
  background-color: #101010;
}

.submitflair.selected:hover {
  background-color: #808080;
}

#flair-container {
  float: right;
  width: calc(100% - 11em);
  display: flex;
  flex-wrap: wrap;
}

@media only screen and (max-width : 480px) {
  #flair-container {
    width: 100%;
  }
}

.pollflair {
  padding: 3px;
  margin-right: .5em;
  border-radius: 5px;
  color: white;
  background-color: #929292;
  font-size: small;
}

.user_flair {
  border: 1px solid #aaa;
  border-radius: 2px;
  background-color: #eee;
  padding: 3px;
  line-height: 1.4em;
  white-space: nowrap;
  color: #111;
}

.selflair:hover,
.submitflair:hover {
  background-color: #d5d5d5;
}

.commenthead {
  font-size: 0.7em;
  color: #888;
  /**  margin-top: 1em; **/
}
/* ... */

